Change log
2020-08-17
1. Changed T4 and T3 maximum secretion from 200% to 125%.

2020-06-07
1. Changed ThyrosimJr T4 normal range to 59-119.
2. Changed ThyrosimJr T3 normal range to 1-2.15.
3. Changed ThyrosimJr TSH normal range to 0.6-4.

2020-05-21
1. Added method to display variables that have both superscript and subscript.

2020-04-29
1. Changed ThyrosimJr p48/VTSH to 2.3.
2. Added PROJECTS info button.

2020-04-28
1. Parameter editor can now load/save using JSON.

2020-04-18
1. Updated ThyrosimJr normal ranges.

2020-01-08
1. Thyrosim set to version 3.0.

2019-12-13
1. The UI (simtime, dials, inputs) now match the experiment run.

2019-12-12
1. Added parameter editor to the UI.
2. Original html links now redirect to cgi versions.
3. Thyrosim set to version 2.1.

2019-11-24
1. Added additional examples with images.
2. Updated d3, jquery, and jquery-ui libraries.
3. Fixed issue with animation not aligning.
4. Fixed issue where free hormone values were not calculating correctly.

2019-11-23
1. Deprecated Octave solvers.
2. Consolidated Getinit.java and Thyrosim.java into Thyrosim.java.

2019-11-19
1. Added ThyrosimJr html.
2. Removed solvers for just ThyrosimJr.
3. Created a system where the same solver can be used for any simulation model
   (e.g., ThyrosimJr).
4. Added configuration files and UI changes so #3 is possible.

2019-01-22
1. "Example" pane automatically closes after a run.
2. Thyrosim set to version 2.0.

2018-12-31
1. Added temporary multiplicative factor for free hormone values.

2018-04-25
1. Changed FT4 normal range to 8 - 17 ng/L.
2. Changed FT3 normal range to 2.2 - 4.4 ng/L.

2018-04-19
1. Added free T4 and free T3 graphs, with button to toggle them.
2. Enlarged graph area and other minor formatting changes.

2018-04-18
1. Added free T4 and free T3 values to return from the solver.

2018-02-04
1. Added .gitignore file.

2017-03-28
1. Added stand alone Matlab m file for repeated oral dosing.

2016-12-12
1. Updated version number.