@@ -1,4 +1,7 @@
 Change log
+2020-12-09
+1. Updated ThyrosimJr parameters and SS values.
+
 2020-08-17
 1. Changed T4 and T3 maximum secretion from 200% to 125%.
 
